# rusoto-s3-example

./: Cargo.toml  README.md
src/: main.rs
