[package]
name = "rusoto-s3-example"
version = "0.1.0"
authors = ["Hiroaki Nakamura <hnakamur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.46.0"
rusoto_s3 = "0.46.0"
rusoto_credential = "0.46.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.38"
